--- a/index.html
+++ b/index.html
@@ -45,7 +45,47 @@
             <button type="button" class="btn btn-secondary mb-4 w-100" data-bs-toggle="modal" data-bs-target="#instructionsModal">
               Instructions
             </button>
-            <!-- Instructions Modal omitted for brevity -->
+            <!-- Instructions Modal -->
+            <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="instructionsModalLabel">ব্যবহার নির্দেশনা</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <ol class="ps-3">
+                      <li class="mb-3">
+                        <strong>PDF সাইজ:</strong>
+                        <ul class="ps-3 mb-0">
+                          <li>ডিফল্ট: <code class="text-primary">152.4 mm × 101.6 mm</code> (6″ × 4″)</li>
+                        </ul>
+                      </li>
+                      <li class="mb-3">
+                        <strong>ইমেজ সাইজ:</strong>
+                        <ul class="ps-3 mb-0">
+                          <li>হেডার: ≥900×300px (JPEG/PNG)</li>
+                          <li>ফুটার: ≥900×450px (JPEG/PNG)</li>
+                          <li class="text-warning"><strong>মহত্বপূর্ণ:</strong> হেডার ও ফুটার স্বয়ংক্রিয়ভাবে প্রস্থ অনুযায়ী প্রসারিত হবে।</li>
+                        </ul>
+                      </li>
+                      <li class="mb-3">
+                        <strong>এক্সেল:</strong>
+                        <ul class="ps-3 mb-0">
+                          <li>এক্সটেনশন: <code class="text-primary">.xls</code>, <code class="text-primary">.xlsx</code> &mdash;
+                            <a href="EXCEL_TEMPLATE_URL" target="_blank">ডাউনলোড টেমপ্লেট</a>
+                          </li>
+                          <li>কলাম: <code class="text-primary">Invoice</code>, <code class="text-primary">First Name</code>, <code class="text-primary">Last Name</code>, <code class="text-primary">Phone</code>, <code class="text-primary">Address</code>, <code class="text-primary">Order Total Amount</code></li>
+                        </ul>
+                      </li>
+                      <li class="mb-3"><strong>ইনভয়েস সিলেকশন:</strong> Ctrl/Cmd দিয়ে একাধিক নির্বাচন</li>
+                      <li class="mb-3"><strong>ডাউনলোড:</strong> <code class="text-primary">shipping_labels.zip</code></li>
+                    </ol>
+                    <p class="text-info"><strong>ভিডিও নির্দেশিকা:</strong> <a href="YOUTUBE_URL" target="_blank">টিউটোরিয়াল দেখুন</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <!-- Paper size controls -->
             <div class="mb-3 row">
