--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
         const wb = XLSX.read(arr, { type: 'array' });
         let last = {};
         parsedRows = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]], {defval:''})
-          .map(r => { 
+          .map(r => {
             ['Invoice','First Name','Last Name','Phone','Address','Order Total Amount']
-              .forEach(k=> r[k] = r[k] || last[k] || '');
-            last={...r}; 
+              .forEach(k => r[k] = r[k] || last[k] || '');
+            last = {...r};
             return r;
           });
         invoiceList = [...new Set(parsedRows.map(r=>r['Invoice'].trim()))];
         const sel = document.getElementById('invoiceSelect');
-        sel.innerHTML=''; 
-        invoiceList.forEach(i=>sel.append(new Option(i,i)));
+        sel.innerHTML = '';
+        invoiceList.forEach(i => sel.append(new Option(i,i)));
         document.getElementById('invoiceSelection').classList.remove('hidden');
       } catch {
         showAlert('Error parsing Excel', 'danger');
@@ -216,18 +216,24 @@
       document.getElementById('alertPlaceholder').append(div);
     }
     document.getElementById('generateBtn').addEventListener('click', async ()=>{
-      const design = await readURL(document.getElementById('designInput').files[0]);
-      if(!design) return showAlert('Select design image', 'danger');
-      if(!parsedRows.length) return showAlert('Upload and parse Excel first', 'danger');
+      const designFile = document.getElementById('designInput').files[0];
+      if (!designFile) {
+        return showAlert('Select a design image first', 'danger');
+      }
+      const design = await readURL(designFile);
+
+      if (!parsedRows.length) {
+        return showAlert('Upload and parse Excel first', 'danger');
+      }
 
       let w,h,unit;
       const pr = document.getElementById('presetSize').value;
-      if(pr==='custom'){
+      if (pr==='custom') {
         w = +document.getElementById('paperWidth').value;
         h = +document.getElementById('paperHeight').value;
         unit = document.getElementById('paperUnit').value;
-        if(unit==='in'){ w*=25.4; h*=25.4; unit='mm'; }
-        if(unit==='pt'){ w*=0.352778; h*=0.352778; unit='mm'; }
+        if (unit==='in') { w*=25.4; h*=25.4; unit='mm'; }
+        if (unit==='pt') { w*=0.352778; h*=0.352778; unit='mm'; }
       } else {
         [w,h,unit] = pr.split(',');
         w = +w; h = +h;
@@ -235,14 +241,14 @@
 
       const zip = new JSZip();
       const opts = Array.from(document.getElementById('invoiceSelect').selectedOptions).map(o=>o.value);
-      const targets = opts.length? opts: invoiceList;
+      const targets = opts.length ? opts : invoiceList;
 
-      for(const inv of targets){
-        const group = parsedRows.filter(r=>r['Invoice'].trim()===inv);
-        if(!group.length) continue;
+      for (const inv of targets) {
+        const group = parsedRows.filter(r => r['Invoice'].trim()===inv);
+        if (!group.length) continue;
 
         const doc = new jsPDF({unit,format:[w,h]});
-        if(customFontName && customFontData){
+        if (customFontName && customFontData) {
           doc.addFileToVFS(customFontName,customFontData);
           doc.addFont(customFontName,customFontName,'normal');
           doc.setFont(customFontName,'normal');
@@ -251,31 +257,30 @@
         }
         doc.setFontSize(10);
 
-        // draw design at top & bottom
         const props = doc.getImageProperties(design);
         const imgH  = w * (props.height/props.width);
         doc.addImage(design,'PNG',0,0,w,imgH);
         doc.addImage(design,'PNG',0,h-imgH,w,imgH);
 
         let y = imgH + 11, labelX = 10, valueX = labelX + 18;
-        doc.text('Invoice #:', labelX, y);         doc.text(inv,         valueX, y); y += 7;
+        doc.text('Invoice #:', labelX, y); doc.text(inv, valueX, y); y += 7;
         const name = titleCase(group[0]['First Name']+' '+group[0]['Last Name']);
-        doc.text('Name:',      labelX, y);         doc.text(name,        valueX, y); y += 7;
+        doc.text('Name:', labelX, y); doc.text(name, valueX, y); y += 7;
         let num = group[0]['Phone'].replace(/\D/g,'');
-        if(num.startsWith('880')) num = num.slice(3);
-        else if(num.startsWith('0')) num = num.slice(1);
-        if(num.length>10) num = num.slice(-10);
-        doc.text('Phone:',     labelX, y);         doc.text(num,         valueX, y); y += 7;
-        const addrLines = doc.splitTextToSize(titleCase(group[0]['Address']), w - valueX - 10);
-        doc.text('Address:',   labelX, y);         doc.text(addrLines,   valueX, y); y += addrLines.length * 7;
+        if (num.startsWith('880')) num = num.slice(3);
+        else if (num.startsWith('0')) num = num.slice(1);
+        if (num.length>10) num = num.slice(-10);
+        doc.text('Phone:', labelX, y); doc.text(num, valueX, y); y += 7;
+        const lines = doc.splitTextToSize(titleCase(group[0]['Address']), w - valueX - 10);
+        doc.text('Address:', labelX, y); doc.text(lines, valueX, y); y += lines.length * 7;
         const notes = group.map(r=>r['NOTE']||'').join(' ').toLowerCase();
         const total = notes.includes('paid') ? '0' : String(Math.round(group[0]['Order Total Amount']));
-        doc.text('Total:',      labelX, y);         doc.text(`Tk ${total}`, valueX, y); y += 7;
-        doc.text('Items:',      labelX, y);         y += 7;
-        group.forEach(r=>{
+        doc.text('Total:', labelX, y); doc.text(`Tk ${total}`, valueX, y); y += 7;
+        doc.text('Items:', labelX, y); y += 7;
+        group.forEach(r=> {
           const item = r['Items'] ? titleCase(r['Items']) : '';
           const qty  = r['Quantity'] ? ` (${r['Quantity']})` : '';
-          if(item){
+          if (item) {
             doc.text(`- ${item}${qty}`, labelX+10, y);
             y += 7;
           }
