--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Shipping Label Generator</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- SheetJS -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
   <!-- jsPDF -->
@@ -32,9 +35,13 @@
           </div>
           <button id="unlockBtn" class="btn btn-primary w-100">Unlock</button>
           <div id="unlockAlert" class="mt-3"></div>
-          <div class="mt-3">
-            <a href="YOUTUBE_URL" target="_blank" class="btn btn-danger me-2">See instructions</a>
-            <a href="https://wa.me/8801610926927" target="_blank" class="btn btn-success">Contact us</a>
+          <div class="mt-3 d-flex justify-content-center gap-3">
+            <a href="YOUTUBE_URL" target="_blank" class="text-decoration-none text-dark d-flex align-items-center">
+              <i class="bi bi-youtube fs-4"></i><span class="ms-2">See instructions</span>
+            </a>
+            <a href="https://wa.me/8801610926927" target="_blank" class="text-decoration-none text-success d-flex align-items-center">
+              <i class="bi bi-whatsapp fs-4"></i><span class="ms-2">Contact us</span>
+            </a>
           </div>
         </div>
       </div>
