--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <div class="container d-flex justify-content-center">
-    <div class="w-100" style="max-width: 600px;">
+    <div class="w-80" style="max-width: 600px;">
 
       <!-- Unlock Page -->
       <div id="unlockPage" class="card shadow-sm mb-4">
@@ -37,7 +37,7 @@
           <div id="unlockAlert" class="mt-3"></div>
           <div class="mt-3 d-flex justify-content-center gap-3">
             <a href="YOUTUBE_URL" target="_blank" class="text-decoration-none text-dark d-flex align-items-center">
-              <i class="bi bi-youtube fs-4"></i><span class="ms-2">See instructions</span>
+              <i class="bi bi-youtube fs-4" style="color: #FF0000;"></i><span class="ms-2">See instructions</span>
             </a>
             <a href="https://wa.me/8801610926927" target="_blank" class="text-decoration-none text-success d-flex align-items-center">
               <i class="bi bi-whatsapp fs-4"></i><span class="ms-2">Contact us</span>
