--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
         </div>
       </div>
 
+
+      <!-- How to get Unlock Code? accordion -->
+<div class="accordion mb-4" id="unlockInfoAccordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingUnlockInfo">
+      <button
+        class="accordion-button collapsed"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseUnlockInfo"
+        aria-expanded="false"
+        aria-controls="collapseUnlockInfo"
+      >
+        How to get Unlock Code?
+      </button>
+    </h2>
+    <div
+      id="collapseUnlockInfo"
+      class="accordion-collapse collapse"
+      aria-labelledby="headingUnlockInfo"
+      data-bs-parent="#unlockInfoAccordion"
+    >
+      <div class="accordion-body">
+        <!-- your sample text here -->
+        <p>
+          To obtain an unlock code, please visit our pricing page and complete
+          the purchase form. Once payment is confirmed, your code will be emailed
+          to you within minutes.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
       <!-- Generator Page (hidden until unlocked) -->
       <div id="generatorPage" class="hidden">
         <div class="card shadow-sm mb-4">
