--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <div class="w-80" style="max-width: 600px;">
 
       <!-- Unlock Page -->
-      <div id="unlockPage" class="card shadow-sm mb-4">
-        <div class="card-body p-4 text-center">
+<div class="accordion mb-4"
+  style="width:80%; max-width:600px; margin-left:auto; margin-right:auto;"
+  id="unlockInfoAccordion">        
+  <div class="card-body p-4 text-center">
           <h1 class="card-title mb-4">Enter Unlock Code</h1>
           <div class="mb-3">
             <input type="text" id="unlockInput" class="form-control" placeholder="Enter unlock code">
