--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <div class="w-80" style="max-width: 600px;">
 
       <!-- Unlock Page -->
-<div class="accordion mb-4"
-  style="width:80%; max-width:600px; margin-left:auto; margin-right:auto;"
-  id="unlockInfoAccordion">        
+<div class="accordion mb-4">        
   <div class="card-body p-4 text-center">
           <h1 class="card-title mb-4">Enter Unlock Code</h1>
           <div class="mb-3">
