--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 </head>
 <body>
   <div class="container d-flex justify-content-center">
-    <div class="w-80" style="max-width: 600px;">
+    <div class="w-50" style="max-width: 600px;">
 
       <!-- Unlock Page -->
-<div class="accordion mb-4">        
+<div class="accordion w-50">        
   <div class="card-body p-4 text-center">
           <h1 class="card-title mb-4">Enter Unlock Code</h1>
           <div class="mb-3">
