--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <!-- How to get Unlock Code? accordion -->
-      <div class="accordion mb-4 w-50" style="max-width:600px; margin:0 auto;" id="unlockInfoAccordion">
+      <div class="accordion mb-4" id="unlockInfoAccordion">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingUnlockInfo">
             <button
