--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
               <!-- How to get Unlock Code? accordion -->
-      <div class="accordion mb-4" id="unlockInfoAccordion">
+      <div class="accordion mb-4 w-25" id="unlockInfoAccordion">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingUnlockInfo">
             <button
